Does this solve the spacing problem on the deployed medor.coop?

--- a/medor/static/medor/less/grid.less
+++ b/medor/static/medor/less/grid.less
@@ -13,7 +13,7 @@
 }
 
 /*  SECTIONS  */
-section, .section {
+section {
     .fullwidth;
     margin-top: 240px;
 }
